--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,40 +9,25 @@ logging:
       hibernate:
         type: trace
 
-# Local env
 ---
 spring:
   profiles: local
-  jpa:
-    database: mysql
-    properties.hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
-    hibernate:
-      ddl-auto: create
-    show-sql: true
-    properties:
-      hibernate.format_sql: true
   datasource:
-    url: jdbc:mysql://localhost:3306/oauth2?useSSL=false&serverTimezone=UTC
-    username: root
-    password:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-
-# Init
----
-spring:
-  profiles: init
-  jpa:
-    database: mysql
-    properties.hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
-    hibernate:
-      ddl-auto: create
-    show-sql: true
-    properties:
-      hibernate.format_sql: true
-  datasource:
-    url: jdbc:mysql://localhost:3306/oauth2?useSSL=false&serverTimezone=UTC
-    username: root
-    password:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    initialization-mode: always
     platform: oauth2
+#    url: jdbc:h2:~/oauth2;DB_CLOSE_ON_EXIT=FALSE
+    url: jdbc:h2:mem:oauth2;DB_CLOSE_ON_EXIT=FALSE
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
+    initialization-mode: embedded
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: create
+    show-sql: true
+    properties:
+      hibernate.format_sql: true
