reset client 이용해서 oauth api 로 호출 해보자

--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ applicationDefaultJvmArgs = [
 ]
 mainClassName = "com.zzizily.oauth2.Application"
 
-if (profile != "local" && profile != "dev") {
+if (profile == "dev" || profile == "stage" || profile == "prod") {
   //gc 발생시 로그 확인
   applicationDefaultJvmArgs.addAll([
           "-verbose:gc",
