--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,10 @@ wrapper {
 
 configurations {
   compile.exclude module: "spring-boot-starter-tomcat"
+  developmentOnly
+  runtimeClasspath {
+    extendsFrom developmentOnly
+  }
   compileOnly {
     extendsFrom annotationProcessor
   }
@@ -119,13 +123,17 @@ dependencies {
   implementation          "org.springframework.boot:spring-boot-starter-web"
   implementation          "org.springframework.boot:spring-boot-starter-undertow"
   implementation          "org.springframework.boot:spring-boot-starter-data-jpa"
-  implementation          "org.springframework.boot:spring-boot-starter-security"
-  implementation          "org.springframework.boot:spring-boot-starter-thymeleaf"
+  implementation          "org.springframework.boot:spring-boot-starter-actuator"
   implementation          "org.springframework.boot:spring-boot-starter-jdbc"
-  implementation          "org.springframework.boot:spring-boot-starter-thymeleaf"
-  implementation          "org.springframework.security.oauth:spring-security-oauth2:${dependencySpringSecurityOauth2}"
-  implementation          "org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:${dependencySpringSecurityOauth2Autoconfigure}"
+  developmentOnly         "org.springframework.boot:spring-boot-devtools"
+  compileOnly             "org.springframework.boot:spring-boot-configuration-processor"
+  annotationProcessor     "org.springframework.boot:spring-boot-configuration-processor"
 
+//  implementation          "org.springframework.boot:spring-boot-starter-oauth2-client"
+//  implementation          "org.springframework.boot:spring-boot-starter-oauth2-resource-server"
+
+  implementation          "org.springframework.cloud:spring-cloud-starter-oauth2"
+  implementation          "org.springframework.cloud:spring-cloud-starter-security"
   implementation          "com.h2database:h2"
   compileOnly             "org.projectlombok:lombok"
   annotationProcessor     "org.projectlombok:lombok"
