--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,44 +21,53 @@ management:
     health:
       show-details: ALWAYS
 
-
-
-logging:
-  level:
-    ROOT: info
-    com.zzizily: debug
-    org.springframework.web: trace
-    org.springframework.boot: info
-    org.springframework.boot.autoconfigure.logging.ConditionEvaluationReportLoggingListener.debug: info
-    org.springframework.boot.devtools: info
-    org.springframework.boot.autoconfigure: debug
-    org.springframework.cloud.gateway: trace
-    org.springframework.security: info
-    org.springframework.security.oauth2: debug
-    org.hibernate.SQL: info
-    org.hibernate.type.descriptor.sql: info
-
-
 ---
+
 spring:
   profiles: local
   datasource:
-    platform: oauth2
+    platform: h2
 #    url: jdbc:h2:~/oauth2;DB_CLOSE_ON_EXIT=FALSE
-    url: jdbc:h2:mem:oauth2;DB_CLOSE_ON_EXIT=FALSE
-
+    url: jdbc:h2:mem:oauth;DB_CLOSE_ON_EXIT=FALSE;
     username: sa
     password:
     driver-class-name: org.h2.Driver
     initialization-mode: embedded
+#    script 에서 한글 입력 가능 하게
+    sql-script-encoding: UTF-8
+#    SQL 오류 발생해도 종료 안되게 (true)
+    continue-on-error: false
   h2:
     console:
       enabled: true
       path: /h2-console
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
-    hibernate:
-      ddl-auto: create
-    show-sql: true
     properties:
       hibernate.format_sql: true
+      hibernate.show_sql: true
+      hibernate.use_sql_comments: true
+      hibernate.jdbc.lob.non_contextual_creation: true
+      hibernate.jdbc.diralect: org.hibernate.dialect.PostgreSQL95Dialect
+    hibernate:
+      # ddl-auto 설정
+      # none: 기본 값이며 아무 일도 일어나지 않는다.
+      # create: 데이터베이스를 drop 한 후, 데이터베이스를 새로 생성한다.
+      # create-drop: SessionFactory가 시작될 때 스키마를 drop하고 재생성하며, SessionFactory가 종료될 때도 스키마를 drop 한다.
+      # validate: 데이터베이스 스키마를 검증 한다.
+      # update: 데이터베이스 스키마를 갱신 한다.
+      ddl-auto: none
+    show-sql: true
+    open-in-view: true
+    database-platform: org.hibernate.dialect.PostgreSQL95Dialect
+
+logging:
+  level:
+    ROOT: warn
+    com.zzizily: debug
+#    org.springframework.boot: info
+#    org.springframework.boot.autoconfigure.logging.ConditionEvaluationReportLoggingListener.debug: debug
+#    org.springframework.boot.devtools: debug
+#    org.springframework.web: debug
+    org.hibernate.SQL: trace
+    org.hibernate.type.descriptor.sql: trace
+    org.springframework.security: debug
