--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -55,7 +55,7 @@ spring:
       # create-drop: SessionFactory가 시작될 때 스키마를 drop하고 재생성하며, SessionFactory가 종료될 때도 스키마를 drop 한다.
       # validate: 데이터베이스 스키마를 검증 한다.
       # update: 데이터베이스 스키마를 갱신 한다.
-      ddl-auto: none
+      ddl-auto: create
     show-sql: true
     open-in-view: true
     database-platform: org.hibernate.dialect.PostgreSQL95Dialect
@@ -68,6 +68,6 @@ logging:
 #    org.springframework.boot.autoconfigure.logging.ConditionEvaluationReportLoggingListener.debug: debug
 #    org.springframework.boot.devtools: debug
 #    org.springframework.web: debug
-    org.hibernate.SQL: trace
+    org.hibernate.SQL: debug
     org.hibernate.type.descriptor.sql: trace
     org.springframework.security: debug
