--- a/build.gradle
+++ b/build.gradle
@@ -133,6 +133,7 @@ dependencies {
 //  implementation          "org.springframework.boot:spring-boot-starter-oauth2-resource-server"
   implementation          "org.springframework.cloud:spring-cloud-starter-oauth2"
   implementation          "org.springframework.cloud:spring-cloud-starter-security"
+  implementation          "org.springframework.cloud:spring-cloud-starter-netflix-eureka-client"
   implementation          "org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.1.6.RELEASE"
   implementation          "org.springframework.security:spring-security-jwt:1.0.10.RELEASE"
   implementation          "com.h2database:h2"
