--- a/.gitignore
+++ b/.gitignore
@@ -15,14 +15,6 @@
 *.iws
 *.iml
 *.ipr
-
-### NetBeans ###
-/nbproject/private/
-/build/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
 out/
 .gradle/
-log/*.log
+log/**
