--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,7 +14,71 @@ management:
       exposure:
         include: "*"
   #        include: ["health","info","loggers","httptrace","env","beans","caches","configprops","mappings","scheduledtasks","sessions","threaddump","jolokia", "logfile", "refresh"]
-
+      cors:
+        allowed-origins:
+          - chrome-extension://aejoelaoggembcahagimdiliamlcdmfm
+          - http://local.trcc.tk:28001
+          - http://www.halfclub.com
+          - http://www.boribori.co.kr
+          - http://www.ogage.co.kr
+          - http://www.trcc.tk
+          - http://cloud-eureka1-local-service-pig.trcc.com:8761
+          - http://cloud-eureka2-local-service-pig.trcc.com:8761
+          - http://cloud-config-local-service-pig.trcc.com:8888
+          - http://cloud-monitor-local-service-pig.trcc.com:8080
+          - http://cloud-oauth-local-service-pig.trcc.com:8081
+          - http://cloud-gateway-local-service-pig.trcc.com:8080
+          - http://api-skeleton-local-service-pig.trcc.com:28001
+          - http://api-skeleton-local-service-pig.trcc.com:28002
+          - http://api-skeleton-local-service-pig.trcc.com:28003
+          - http://api-skeleton-local-service-pig.trcc.com:28004
+          - http://api-skeleton-local-service-pig.trcc.com:28005
+          - http://client-skeleton-local-service-pig.trcc.com:38001
+          - http://mhalf-main-local-service-pig.trcc.com:38101
+          - http://half-list-local-service-pig.trcc.com:38102
+          - http://half-main-local-service-pig.trcc.com:38201
+          - http://half-list-local-service-pig.trcc.com:38202
+          - http://mbori-main-local-service-pig.trcc.com:38301
+          - http://mbori-list-local-service-pig.trcc.com:38302
+          - http://bori-main-local-service-pig.trcc.com:38401
+          - http://bori-list-local-service-pig.trcc.com:38402
+          - https://client-payment-local-service-pig.trcc.com:38443
+          - http://cloud-eureka1-local-service-pig.trcc.tk:8761
+          - http://cloud-eureka2-local-service-pig.trcc.tk:8761
+          - http://cloud-config-local-service-pig.trcc.tk:8888
+          - http://cloud-monitor-local-service-pig.trcc.tk:8080
+          - http://cloud-oauth-local-service-pig.trcc.tk:8081
+          - http://cloud-gateway-local-service-pig.trcc.tk:8080
+          - http://api-skeleton-local-service-pig.trcc.tk:28001
+          - http://api-skeleton-local-service-pig.trcc.tk:28002
+          - http://api-skeleton-local-service-pig.trcc.tk:28003
+          - http://api-skeleton-local-service-pig.trcc.tk:28004
+          - http://api-skeleton-local-service-pig.trcc.tk:28005
+          - http://client-skeleton-local-service-pig.trcc.tk:38001
+          - http://mhalf-main-local-service-pig.trcc.tk:38101
+          - http://half-list-local-service-pig.trcc.tk:38102
+          - http://half-main-local-service-pig.trcc.tk:38201
+          - http://half-list-local-service-pig.trcc.tk:38202
+          - http://mbori-main-local-service-pig.trcc.tk:38301
+          - http://mbori-list-local-service-pig.trcc.tk:38302
+          - http://bori-main-local-service-pig.trcc.tk:38401
+          - http://bori-list-local-service-pig.trcc.tk:38402
+          - https://client-payment-local-service-pig.trcc.tk:38443
+        allowed-methods:
+          - GET
+          - POST
+          - PUT
+          - OPTIONS
+          - DELETE
+        allow-credentials: true
+        allowed-headers:
+          - x-requested-with
+          - authorization
+          - Content-Type
+          - Authorization
+          - credential
+          - X-XSRF-TOKEN
+        max-age: 3600s
   endpoint:
     health:
       show-details: ALWAYS
@@ -74,17 +138,23 @@ spring:
         physical-strategy: org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
     show-sql: true
     open-in-view: true
+  devtools:
+    restart:
+      enabled: true
+
 
 security:
   oauth2:
-    client:
-      client-id: local_client
-      client-secret: password
-      scope: read_profile, read_posts
+#    client:
+#      client-id: local_client
+#      client-secret: password
+#      scope: read_profile, read_posts
     resource:
 #      token-info-uri: ${tricycle.url.cloud-oauth}/oauth/check_token #로컬일 경우 직접 OAUTH 호출하자
       jwt:
         key-value: jwt_secret_key
+    sso:
+      login-path: /login
 
 logging:
   file:
