--- a/build.gradle
+++ b/build.gradle
@@ -125,6 +125,7 @@ dependencies {
   implementation          "org.springframework.boot:spring-boot-starter-data-jpa"
   implementation          "org.springframework.boot:spring-boot-starter-actuator"
   implementation          "org.springframework.boot:spring-boot-starter-jdbc"
+  implementation          "org.springframework.boot:spring-boot-starter-thymeleaf"
   developmentOnly         "org.springframework.boot:spring-boot-devtools"
   compileOnly             "org.springframework.boot:spring-boot-configuration-processor"
   annotationProcessor     "org.springframework.boot:spring-boot-configuration-processor"
