--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,10 @@ version=latest
 encoding=UTF-8
 compatibilityVersion=1.8
 
+#repository
+mavenUrl=http://alm-repo.trcc.dev/repository/trcc-service-java/
+registryUrl=324619539895.dkr.ecr.ap-northeast-2.amazonaws.com
+
 #plugins
 pluginSpringBootGradle=2.1.6.RELEASE
 pluginDependencyManagement=1.0.6.RELEASE
@@ -10,11 +14,12 @@ pluginDependencyAsciidoctor=1.5.7
 pluginGradleExtraConfigurationsPlugin=3.0.3
 pluginFranzbeckerGradleLombok=2.1
 pluginEwerkQuerydsl=1.0.10
-pluginGradleDocker=4.8.0
+pluginGradleDocker=4.10.0
 pluginGradleGitProperties=2.0.0
+pluginGradleAwsEcrPlugin=0.5.2
 
 #dependency
-dependencySpringBootAdmin=2.1.4
+dependencySpringBootAdmin=2.1.6
 dependencyGuava=27.0.1-jre
 dependencyH2=1.4.197
 dependencyLog4jdbc=1.16
@@ -43,11 +48,12 @@ dependencyQuerydsl=4.2.1
 dependencyJolokia=1.6.0
 dependencyJunitJupiter=5.4.2
 dependencyJunitPlatform=1.4.2
+dependencySpringSecurityOauth2Autoconfigure=2.1.6.RELEASE
 dependencyValidationApi=2.0.1.Final
 dependencyJacksonDatabind=2.9.8
 dependencyFeignForm=3.5.0
 dependencySpringSecurityOauth2=2.3.5.RELEASE
 
 #dependencyManagement
-managementSpringBootAdmin=2.1.4
+managementSpringBootAdmin=2.1.6
 managementSpringCloudVersion=Greenwich.SR1
